finished 2 recipes and fixed improper indentation with ingredients and steps

--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -22,18 +22,25 @@
       <li>Star anise, whole cloves, cinnamon sticks</li>
       <li>Beef or chicken broth, water</li>
       <li>Fish Sauce, sugar, salt</li>
-      
-      <h2>Steps</h2>
-      <ol>
-          <li>Char the onion and ginger until they are fragrant and slightly blackened.</li>
-          <li>Toast the whole spices in a dry skillet until fragrant.</li>
-          <li>Simmer the broth ingredients for at least 30 minutes.</li>
-          <li>Cook the rice noodles according to package directions.</li>
-          <li>Assemble the bowls by adding noodles, your chosen meat, and the hot broth.</li>
-          <li>Garnish generously with fresh herbs, bean sprouts, and a squeeze of lime.</li>
-        </ul>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Char the onion and ginger until they are fragrant and slightly
+        blackened.
+      </li>
+      <li>Toast the whole spices in a dry skillet until fragrant.</li>
+      <li>Simmer the broth ingredients for at least 30 minutes.</li>
+      <li>Cook the rice noodles according to package directions.</li>
+      <li>
+        Assemble the bowls by adding noodles, your chosen meat, and the hot
+        broth.
+      </li>
+      <li>
+        Garnish generously with fresh herbs, bean sprouts, and a squeeze of
+        lime.
+      </li>
     </ol>
-
-
   </body>
 </html>
