--- a/recipes/banh mi.html
+++ b/recipes/banh mi.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <a href="../index.html">Home</a>
     <br />
     <img src="../assets/banh mi.jpg" alt="image of banh mi" width="200px" />
     <h2>Description:</h2>
     <p>
-        Who needs subway when you can make your own banh mi? This recipe provides the ingredients and steps needed to make the best sandwhich (banh mi). 
+      Who needs subway when you can make your own banh mi? This recipe provides
+      the ingredients and steps needed to make the best sandwhich (banh mi).
     </p>
     <h2>Ingredients</h2>
     <ul>
-      <li>Onion</li>
-      <li>Fresh Ginger</li>
-      <li>Star anise, whole cloves, cinnamon sticks</li>
-      <li>Beef or chicken broth, water</li>
-      <li>Fish Sauce, sugar, salt</li>
-      
-      <h2>Steps</h2>
-      <ol>
-          <li>Char the onion and ginger until they are fragrant and slightly blackened.</li>
-          <li>Toast the whole spices in a dry skillet until fragrant.</li>
-          <li>Simmer the broth ingredients for at least 30 minutes.</li>
-          <li>Cook the rice noodles according to package directions.</li>
-          <li>Assemble the bowls by adding noodles, your chosen meat, and the hot broth.</li>
-          <li>Garnish generously with fresh herbs, bean sprouts, and a squeeze of lime.</li>
-        </ul>
-    </ol>
+      <li>Baguette</li>
+      <li>Protein</li>
+      <li>Spreads</li>
+      <li>Pickled Vegetables</li>
+      <li>Fresh Vegetables</li>
+      <li>Seasoning</li>
+    </ul>
 
-    
-</body>
+    <h2>Steps</h2>
+    <ol>
+      <li>Picle the Vegetables.</li>
+      <li>Prepare the Protein.</li>
+      <li>Prepare Other Fillings.</li>
+      <li>Assemble the Banh Mi.</li>
+    </ol>
+  </body>
 </html>
