added third recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="recipes/pho.html"> pho recipe</a></li>
       <li><a href="recipes/banh mi.html"> banh mi recipe</a></li>
+      <li><a href="recipes/ice soup.html"> ice soup recipe</a></li>
     </ul>
   </body>
 </html>
