--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TITLE TBD</title>
-  </head>
-  <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/pho.html"> pho recipe</a></li>
-      <li><a href="recipes/banh mi.html"> banh mi recipe</a></li>
-      <li><a href="recipes/ice soup.html"> ice soup recipe</a></li>
-    </ul>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
