--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&amp;display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="section">
+      <div>
+        <h1>Odin Recipes</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab
+          dolorem quis, quia reprehenderit repudiandae illo officia inventore
+          optio ducimus dolor officiis alias aperiam dignissimos, repellendus
+          maiores sunt obcaecati! Quasi sequi voluptatem amet dicta expedita,
+          distinctio dolore excepturi repellendus dignissimos, odio
+          perspiciatis? Atque, asperiores quidem! Necessitatibus doloribus modi
+          culpa eum?
+        </p>
+      </div>
+      <div class="container">
+        <div class="food-card">
+          <a href="recipes/pho.html"
+            ><img
+              src="/assets/228443-authentic-pho-DDMFS-4x3-0523f6531ccf4dbeb4b5bde52e007b1e.jpg"
+              alt="Image of Beef Pho"
+          /></a>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
+            facere!
+          </p>
+        </div>
+
+        <a href="recipes/curry.html"
+          ><img
+            src="assets/slow-cooker-beef-curry-1.jpg"
+            alt="Image of Beef Curry"
+        /></a>
+        <a href="recipes/omelet.html"
+          ><img
+            src="assets/best-omelette-recipe-1-500x500.jpg"
+            alt="Image of Omelet"
+        /></a>
+      </div>
+    </div>
+  </body>
 </html>
