finished landing page rough draft

--- a/index.html
+++ b/index.html
@@ -39,16 +39,28 @@
           </p>
         </div>
 
-        <a href="recipes/curry.html"
-          ><img
-            src="assets/slow-cooker-beef-curry-1.jpg"
-            alt="Image of Beef Curry"
-        /></a>
-        <a href="recipes/omelet.html"
-          ><img
-            src="assets/best-omelette-recipe-1-500x500.jpg"
-            alt="Image of Omelet"
-        /></a>
+        <div class="food-card">
+          <a href="recipes/curry.html"
+            ><img
+              src="assets/slow-cooker-beef-curry-1.jpg"
+              alt="Image of Beef Curry"
+          /></a>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
+            facere!
+          </p>
+        </div>
+        <div class="food-card">
+          <a href="recipes/omelet.html"
+            ><img
+              src="assets/best-omelette-recipe-1-500x500.jpg"
+              alt="Image of Omelet"
+          /></a>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
+            facere!
+          </p>
+        </div>
       </div>
     </div>
   </body>
