--- a/index.html
+++ b/index.html
@@ -4,61 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <div class="section">
       <div>
         <h1>Odin Recipes</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab
-          dolorem quis, quia reprehenderit repudiandae illo officia inventore
-          optio ducimus dolor officiis alias aperiam dignissimos, repellendus
-          maiores sunt obcaecati! Quasi sequi voluptatem amet dicta expedita,
-          distinctio dolore excepturi repellendus dignissimos, odio
-          perspiciatis? Atque, asperiores quidem! Necessitatibus doloribus modi
-          culpa eum?
+        <p class="site-description">
+          Discover authentic recipes from around the world. Our carefully
+          curated collection features traditional dishes with step-by-step
+          instructions, making it easy for home cooks to create
+          restaurant-quality meals in their own kitchen.
         </p>
       </div>
       <div class="container">
         <div class="food-card">
-          <a href="recipes/pho.html"
-            ><img
-              src="/assets/228443-authentic-pho-DDMFS-4x3-0523f6531ccf4dbeb4b5bde52e007b1e.jpg"
-              alt="Image of Beef Pho"
-          /></a>
+          <p>Beef Pho</p>
+          <img
+            class="landing-page-food"
+            src="/assets/228443-authentic-pho-DDMFS-4x3-0523f6531ccf4dbeb4b5bde52e007b1e.jpg"
+            alt="Image of Beef Pho"
+          />
+          <a href="recipes/pho.html"><button>Checkout!</button></a>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
-            facere!
+            A fragrant Vietnamese soup with tender beef, rice noodles, and
+            aromatic herbs in a rich, slow-simmered broth.
           </p>
         </div>
 
         <div class="food-card">
-          <a href="recipes/curry.html"
-            ><img
-              src="assets/slow-cooker-beef-curry-1.jpg"
-              alt="Image of Beef Curry"
-          /></a>
+          <p>Beef Curry</p>
+          <img
+            class="landing-page-food"
+            src="assets/slow-cooker-beef-curry-1.jpg"
+            alt="Image of Beef Curry"
+          />
+          <a href="recipes/curry.html"><button>Checkout!</button></a>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
-            facere!
+            Tender chunks of beef simmered in a rich, spiced curry sauce with
+            vegetables and coconut milk for ultimate comfort food.
           </p>
         </div>
         <div class="food-card">
-          <a href="recipes/omelet.html"
-            ><img
-              src="assets/best-omelette-recipe-1-500x500.jpg"
-              alt="Image of Omelet"
-          /></a>
+          <p>Omelet</p>
+          <img
+            class="landing-page-food"
+            src="assets/best-omelette-recipe-1-500x500.jpg"
+            alt="Image of Omelet"
+          />
+          <a href="recipes/omelet.html"><button>Checkout!</button></a>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
-            facere!
+            A perfectly fluffy omelet filled with fresh ingredients - the
+            classic breakfast dish that's simple yet satisfying.
           </p>
         </div>
       </div>
