--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&amp;display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Pho</h1>
-    <a href="../index.html">Home</a>
+    <div class="section">
+      <div>
+        <h1>Pho</h1>
+        <a href="../index.html">Home</a>
+      </div>
+
+      <div class="container">
+        <div class="generic-card">
+          <div class="macros-card">
+            <div class="card-header">
+              <img
+                class="card-img"
+                src="../assets/authentic-instant-pot-pho-recipe-1959w.jpg"
+                alt="bowl of pho"
+              />
+              <div class="card-info">
+                <span>Beef Pho</span>
+                <div class="cals-time">
+                  <span>35 min </span>
+                  <span>435 cal</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="nutrition-section">
+              <div class="divider-line"></div>
+
+              <p>Nutrition facts (per serving)</p>
+              <div class="nutrition-facts">
+                <span>Protein</span>
+                <span>30g</span>
+              </div>
+              <div class="nutrition-facts">
+                <span>Carbohydrates</span>
+                <span>70g</span>
+              </div>
+              <div class="nutrition-facts">
+                <span>Fat</span>
+                <span>15g</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="generic-card">
+          <div class="macros-card"></div>
+        </div>
+        <div class="generic-card">
+          <div class="macros-card"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
